# feedbinctl

./: AGENT.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  cmd_auth.rs  cmd_diff.rs  cmd_pull.rs  cmd_push.rs  cmd_sync.rs  config.rs  config_file.rs  main.rs
