[package]
name = "feedbinctl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
handlebars = "4"
keyring = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.21", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
wiremock = "0.5"
